--- a/neosport.kz/index.html
+++ b/neosport.kz/index.html
@@ -15,9 +15,11 @@
 			<header class="header">
 	<div class="header__container _container">
 		<div class="header__body">
-			<a href="#home">
-				<img src="img/logo.svg" alt="logo" class="header__logo _ibg">
-			</a>
+			<div class="logotip">
+				<h1 class="header__logo">neosport</h1>
+				<h2 class="header__logo-text">Поставляем напольные <br>
+					покрытия с 2016 года</h2>
+			</div>
 			<div class="header__menu menu">
 				<div class="menu__icon icon-menu">
 					<span></span>
@@ -57,7 +59,7 @@
 		<div class="advantage__body">
 			<div class="advantage__items">
 				<div class="advantage__item">
-					<img src="img/item1.svg" alt="" class="advantage_images">
+					<img src="img/item1.png" alt="" class="advantage_images">
 					<div class="advantage__title">Прямые поставки!</div>
 					<div class="advantage__text">Прямые поставки от завода производителя</div>
 				</div>
