--- a/neosport.kz/index.html
+++ b/neosport.kz/index.html
@@ -65,19 +65,57 @@
 				</div>
 				<div class="advantage__item">
 					<img src="img/item2.png" alt="" class="advantage_images">
-					<div class="advantage__title">Прямые поставки!</div>
-					<div class="advantage__text">Прямые поставки от завода производителя</div>
+					<div class="advantage__title">Соотношение цена/качество
+					</div>
+					<div class="advantage__text">Высокое качество и длительный срок службы</div>
 				</div>
 				<div class="advantage__item">
 					<img src="img/item3.png" alt="" class="advantage_images">
-					<div class="advantage__title">Прямые поставки!</div>
-					<div class="advantage__text">Прямые поставки от завода производителя</div>
+					<div class="advantage__title">Предоставим сертификаты
+					</div>
+					<div class="advantage__text">Международные стандарты качества ISO, сертификат соответствия
+					</div>
 				</div>
 				<div class="advantage__item">
 					<img src="img/item4.png" alt="" class="advantage_images">
-					<div class="advantage__title">Прямые поставки!</div>
+					<div class="advantage__title">Более 500 объектов
+					</div>
 					<div class="advantage__text">Прямые поставки от завода производителя</div>
 				</div>
+			</div>
+		</div>
+	</div>
+</section>
+
+<section class="about">
+	<div class="about__container _container">
+		<div class="about__line"></div>
+		<div class="about__body">
+			<div class="about__img">
+				<img src="img/img_about.png" alt="about" class="about__img-bg _ibg">
+			</div>
+			<div class="about__block">
+				<div class="about__title _title">О компании</div>
+				<p class="about__text">«A&S Global» – компания, основанная профессионалами с серьезным многолетним опытом
+					работы в сфере напольных покрытий. Мы рады, что Вы сделали правильный выбор! Надеемся, что благодаря
+					нашему сайту подберете нужный продукт.
+				</p>
+				<div class="about__line-gor"></div>
+				<p class="about__text">Наша компания - это наше детище, и мы всегда оказываем наивысший уровень сервиса,
+					выгодных условий и качества для наших клиентов.
+
+					Мы знаем, что делаем свою работу круто и профессионально.
+					Мы понимаем, что имя строится годами, а потерять его можно в одно мгновение. Если клиент остался счастлив
+					после сотрудничества с нами, то успех компании неминуем. Это и есть ключевая философия нашей компании.
+				</p>
+				<a href="#" class="about__btn button btn_red">Оставить заявку</a>
+			</div>
+		</div>
+		<div class="about__offer">neosport</div>
+		<div class="about__block-two">
+			<div class="about__box-img">
+				<div class="about__img-sport"><img src="img/sport_l-1.png" alt="sport" class="about__img-sport _ibg"></div>
+				<div class="about__plus-1"></div>
 			</div>
 		</div>
 	</div>
