--- a/#src/_header.html
+++ b/#src/_header.html
@@ -99,10 +99,107 @@
 		</div>
 		<div class="about__offer">neosport</div>
 		<div class="about__block-two">
-			<div class="about__box-img">
-				<div class="about__img-sport"><img src="img/sport_l-1.png" alt="sport" class="about__img-sport _ibg"></div>
-				<div class="about__plus-1"></div>
+			<div class="about__box-row">
+				<div class="about__img-sport">
+					<div class="tooltipp tooltipp-1">
+						<div type="button" class="callback-bt">
+							<div target="_blank" rel="nofollow">
+								<div class="text-call">
+									<img src="img/plus.svg" alt="" class="sport__plus">
+								</div>
+								<span class="tooltipptext">Общая толщина 6.0 м</span>
+							</div>
+						</div>
+					</div>
+					<div class="tooltipp tooltipp-2">
+						<div type="button" class="callback-bt callback-bt-2">
+							<div target="_blank" rel="nofollow">
+								<div class="text-call">
+									<img src="img/plus.svg" alt="" class="sport__plus">
+								</div>
+								<span class="tooltipptext tooltipptext-2">Толщина защитного слоя 1,2 мм</span>
+							</div>
+						</div>
+					</div>
+					<div class="tooltipp">
+						<div type="button" class="callback-bt callback-bt-3">
+							<div target="_blank" rel="nofollow">
+								<div class="text-call">
+									<img src="img/plus.svg" alt="" class="sport__plus">
+								</div>
+								<span class="tooltipptext tooltipptext-3">Ширина 1,8 мм</span>
+							</div>
+						</div>
+					</div>
+					<div class="tooltipp">
+						<div type="button" class="callback-bt callback-bt-4">
+							<div target="_blank" rel="nofollow">
+								<div class="text-call">
+									<img src="img/plus.svg" alt="" class="sport__plus">
+								</div>
+								<span class="tooltipptext tooltipptext-4">Длина 15 м</span>
+							</div>
+						</div>
+					</div>
+					<div class="tooltipp">
+						<div type="button" class="callback-bt callback-bt-5">
+							<div target="_blank" rel="nofollow">
+								<div class="text-call">
+									<img src="img/plus.svg" alt="" class="sport__plus">
+								</div>
+								<span class="tooltipptext tooltipptext-5">Слой стекловолокна - да</span>
+							</div>
+						</div>
+					</div>
+					<div class="tooltipp">
+						<div type="button" class="callback-bt callback-bt-6">
+							<div target="_blank" rel="nofollow">
+								<div class="text-call">
+									<img src="img/plus.svg" alt="" class="sport__plus">
+								</div>
+								<span class="tooltipptext tooltipptext-6">Размер одгого рулона - 27м2</span>
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
+
+			<div class="about__tablee">
+				<div style="overflow-x:auto;">
+					<table>
+						<tr>
+							<th>Основные характеристики</th>
+							<th>Neosport</th>
+						</tr>
+						<tr>
+							<td>Общая толщина</td>
+							<td>6.0 мм</td>
+						</tr>
+						<tr>
+							<td>Толщина защитного слоя</td>
+							<td>1.2 мм</td>
+						</tr>
+						<tr>
+							<td>Слой стекловолокна</td>
+							<td>да</td>
+						</tr>
+						<tr>
+							<td>Ширина</td>
+							<td>1.8 м</td>
+						</tr>
+						<tr>
+							<td>Длина</td>
+							<td>15 м</td>
+						</tr>
+						<tr>
+							<td>Размер одного рулона</td>
+							<td>27 м2</td>
+						</tr>
+					</table>
+				</div>
+			</div>
+
 		</div>
+	</div>
 	</div>
 </section>
