--- a/#src/_header.html
+++ b/#src/_header.html
@@ -101,17 +101,17 @@
 		<div class="about__block-two">
 			<div class="about__box-row">
 				<div class="about__img-sport">
-					<div class="tooltipp tooltipp-1">
-						<div type="button" class="callback-bt">
+					<div class="tooltipp">
+						<div type="button" class="callback-bt callback-bt-1">
 							<div target="_blank" rel="nofollow">
 								<div class="text-call">
 									<img src="img/plus.svg" alt="" class="sport__plus">
 								</div>
-								<span class="tooltipptext">Общая толщина 6.0 м</span>
+								<span class="tooltipptext tooltipptext-1">Общая толщина 6.0 м</span>
 							</div>
 						</div>
 					</div>
-					<div class="tooltipp tooltipp-2">
+					<div class="tooltipp">
 						<div type="button" class="callback-bt callback-bt-2">
 							<div target="_blank" rel="nofollow">
 								<div class="text-call">
@@ -201,5 +201,71 @@
 
 		</div>
 	</div>
+	</div>
+</section>
+
+<section class="tovar">
+	<div class="tovar__container _contaner">
+		<h2 class="tovar__title _title__black"> Напольные <span class="text-red">покрытия</span></h2>
+		<h3 class="tovar__sutitle">*Цвет может немного отличаться от этого изображения
+		</h3>
+		<div class="tovar__items">
+			<div class="tovar__item">
+				<img src="img/tovar/tovar-1.jpg" alt="tovar" class="tovar__img _ibg">
+				<div class="tovar__prise">Цена</div>
+				<div class="tovar__money">6500 <span class="current">тг</span></div>
+			</div>
+			<div class="tovar__item">
+				<img src="img/tovar/tovar-2.jpg" alt="tovar" class="tovar__img _ibg">
+				<div class="tovar__prise">Цена</div>
+				<div class="tovar__money">6500 <span class="current">тг</span></div>
+			</div>
+			<div class="tovar__item">
+				<img src="img/tovar/tovar-3.jpg" alt="tovar" class="tovar__img _ibg">
+				<div class="tovar__prise">Цена</div>
+				<div class="tovar__money">6500 <span class="current">тг</span></div>
+			</div>
+			<div class="tovar__item">
+				<img src="img/tovar/tovar-4.jpg" alt="tovar" class="tovar__img _ibg">
+				<div class="tovar__prise">Цена</div>
+				<div class="tovar__money">6500 <span class="current">тг</span></div>
+			</div>
+			<div class="tovar__item">
+				<img src="img/tovar/tovar-5.jpg" alt="tovar" class="tovar__img _ibg">
+				<div class="tovar__prise">Цена</div>
+				<div class="tovar__money">6500 <span class="current">тг</span></div>
+			</div>
+		</div>
+
+	</div>
+</section>
+
+<section class="work">
+	<div class="work__container _container">
+		<div class="work__body">
+			<div class="work__subtitle">Выполненные работы</div>
+			<div class="work__title">Напольные покрытия</div>
+			<div class="work__title text-red">neosport</div>
+			<div class="work__line"></div>
+		</div>
+	</div>
+</section>
+
+<section class="photo">
+	<div class="photo__container _container">
+		<div class="photo__items">
+			<img src="img/work/1.jpg" alt="work" class="photo__img _ibg">
+			<img src="img/work/2.jpg" alt="work" class="photo__img _ibg">
+			<img src="img/work/3.jpg" alt="work" class="photo__img _ibg">
+			<img src="img/work/4.jpg" alt="work" class="photo__img _ibg">
+			<img src="img/work/5.jpg" alt="work" class="photo__img _ibg">
+			<img src="img/work/6.jpg" alt="work" class="photo__img _ibg">
+			<img src="img/work/7.jpg" alt="work" class="photo__img _ibg">
+			<img src="img/work/8.jpg" alt="work" class="photo__img _ibg">
+			<img src="img/work/9.jpg" alt="work" class="photo__img _ibg">
+			<img src="img/work/10.jpg" alt="work" class="photo__img _ibg">
+			<img src="img/work/11.jpg" alt="work" class="photo__img _ibg">
+			<img src="img/work/12.jpg" alt="work" class="photo__img _ibg">
+		</div>
 	</div>
 </section>
