fix photo section

--- a/#src/_header.html
+++ b/#src/_header.html
@@ -254,18 +254,20 @@
 <section class="photo">
 	<div class="photo__container _container">
 		<div class="photo__items">
-			<img src="img/work/1.jpg" alt="work" class="photo__img _ibg">
-			<img src="img/work/2.jpg" alt="work" class="photo__img _ibg">
-			<img src="img/work/3.jpg" alt="work" class="photo__img _ibg">
-			<img src="img/work/4.jpg" alt="work" class="photo__img _ibg">
-			<img src="img/work/5.jpg" alt="work" class="photo__img _ibg">
-			<img src="img/work/6.jpg" alt="work" class="photo__img _ibg">
-			<img src="img/work/7.jpg" alt="work" class="photo__img _ibg">
-			<img src="img/work/8.jpg" alt="work" class="photo__img _ibg">
-			<img src="img/work/9.jpg" alt="work" class="photo__img _ibg">
-			<img src="img/work/10.jpg" alt="work" class="photo__img _ibg">
-			<img src="img/work/11.jpg" alt="work" class="photo__img _ibg">
-			<img src="img/work/12.jpg" alt="work" class="photo__img _ibg">
+			<div class="photo__item">
+				<img src="img/work/1.jpg" alt="work" class="photo__img _ibg">
+				<img src="img/work/2.jpg" alt="work" class="photo__img _ibg">
+				<img src="img/work/3.jpg" alt="work" class="photo__img _ibg">
+				<img src="img/work/4.jpg" alt="work" class="photo__img _ibg">
+				<img src="img/work/5.jpg" alt="work" class="photo__img _ibg">
+				<img src="img/work/6.jpg" alt="work" class="photo__img _ibg">
+				<img src="img/work/7.jpg" alt="work" class="photo__img _ibg">
+				<img src="img/work/8.jpg" alt="work" class="photo__img _ibg">
+				<img src="img/work/9.jpg" alt="work" class="photo__img _ibg">
+				<img src="img/work/10.jpg" alt="work" class="photo__img _ibg">
+				<img src="img/work/11.jpg" alt="work" class="photo__img _ibg">
+				<img src="img/work/12.jpg" alt="work" class="photo__img _ibg">
+			</div>
 		</div>
 	</div>
 </section>
