--- a/#src/_footer.html
+++ b/#src/_footer.html
@@ -1,5 +1,6 @@
 <footer class="footer">
 	<div class="footer__container _container">
-
+		<p class="copy">Все права защищены © 2021 Разработка и поддержка сайта - Студия <a href="https://webprof.kz"
+				target="_blank">«Webprof.kz»</a> </p>
 	</div>
 </footer>
