--- a/#src/_header.html
+++ b/#src/_header.html
@@ -254,20 +254,216 @@
 <section class="photo">
 	<div class="photo__container _container">
 		<div class="photo__items">
-			<div class="photo__item">
-				<img src="img/work/1.jpg" alt="work" class="photo__img _ibg">
-				<img src="img/work/2.jpg" alt="work" class="photo__img _ibg">
-				<img src="img/work/3.jpg" alt="work" class="photo__img _ibg">
-				<img src="img/work/4.jpg" alt="work" class="photo__img _ibg">
-				<img src="img/work/5.jpg" alt="work" class="photo__img _ibg">
-				<img src="img/work/6.jpg" alt="work" class="photo__img _ibg">
-				<img src="img/work/7.jpg" alt="work" class="photo__img _ibg">
-				<img src="img/work/8.jpg" alt="work" class="photo__img _ibg">
-				<img src="img/work/9.jpg" alt="work" class="photo__img _ibg">
-				<img src="img/work/10.jpg" alt="work" class="photo__img _ibg">
-				<img src="img/work/11.jpg" alt="work" class="photo__img _ibg">
-				<img src="img/work/12.jpg" alt="work" class="photo__img _ibg">
+			<div class="photo__item _gallery">
+				<a href="img/work/1.jpg" class="photo__img _ibg">
+					<img src="img/work/1.jpg" alt="work">
+				</a>
+				<a href="img/work/2.jpg" class="photo__img _ibg">
+					<img src="img/work/2.jpg" alt="work">
+				</a>
+				<a href="img/work/3.jpg" class="photo__img _ibg">
+					<img src="img/work/3.jpg" alt="work">
+				</a>
+				<a href="img/work/4.jpg" class="photo__img _ibg">
+					<img src="img/work/4.jpg" alt="work">
+				</a>
+				<a href="img/work/5.jpg" class="photo__img _ibg">
+					<img src="img/work/5.jpg" alt="work">
+				</a>
+				<a href="img/work/6.jpg" class="photo__img _ibg">
+					<img src="img/work/6.jpg" alt="work">
+				</a>
+				<a href="img/work/7.jpg" class="photo__img _ibg">
+					<img src="img/work/7.jpg" alt="work">
+				</a>
+				<a href="img/work/8.jpg" class="photo__img _ibg">
+					<img src="img/work/8.jpg" alt="work">
+				</a>
+				<a href="img/work/9.jpg" class="photo__img _ibg">
+					<img src="img/work/9.jpg" alt="work">
+				</a>
+				<a href="img/work/10.jpg" class="photo__img _ibg">
+					<img src="img/work/10.jpg" alt="work">
+				</a>
+				<a href="img/work/11.jpg" class="photo__img _ibg">
+					<img src="img/work/11.jpg" alt="work">
+				</a>
+				<a href="img/work/12.jpg" class="photo__img _ibg">
+					<img src="img/work/12.jpg" alt="work">
+				</a>
+
 			</div>
+		</div>
+	</div>
+</section>
+
+<section class="tablebox">
+	<div class="tablebox__container _container">
+		<div class="about__tablee">
+			<div style="overflow-x:auto;">
+				<table>
+					<tr>
+						<th>Основные характеристики</th>
+						<th>Стандарты</th>
+						<th>Единица измерения</th>
+						<th>Neosport</th>
+					</tr>
+					<tr>
+						<td>Толщина</td>
+						<td>ISO EN428</td>
+						<td>мм</td>
+						<td>6.0</td>
+					</tr>
+					<tr>
+						<td>Ширина</td>
+						<td>ISO EN426</td>
+						<td>м</td>
+						<td>1,8</td>
+					</tr>
+					<tr>
+						<td>Длина</td>
+						<td>ISO EN426</td>
+						<td>м</td>
+						<td>1,5</td>
+					</tr>
+					<tr>
+						<th>Характеристики действия</th>
+						<th></th>
+						<th></th>
+						<th></th>
+					</tr>
+					<tr>
+						<td>Поглощение вибрации</td>
+						<td>EN14808</td>
+						<td>%</td>
+						<td>32</td>
+					</tr>
+					<tr>
+						<td>Вертикальная деформация</td>
+						<td>EN14808</td>
+						<td>мм</td>
+						<td>≤1,1</td>
+					</tr>
+					<tr>
+						<td>Отдача энергии</td>
+						<td>EN14808</td>
+						<td>m/s</td>
+						<td>≥0,31</td>
+					</tr>
+					<tr>
+						<td>Коэффициент скольжения</td>
+						<td>EN13036-4</td>
+						<td>---</td>
+						<td>80-100</td>
+					</tr>
+					<tr>
+						<td>Отскок мяча</td>
+						<td>EN12235</td>
+						<td>%</td>
+						<td>≥90</td>
+					</tr>
+					<tr>
+						<th>Технические требования</th>
+						<th></th>
+						<th></th>
+						<th></th>
+					</tr>
+					<tr>
+						<td>Стойкость к истиранию</td>
+						<td>ENISO5470-1</td>
+						<td>мг</td>
+						<td>≤350</td>
+					</tr>
+					<tr>
+						<td>Ударопрочность</td>
+						<td>EN1571</td>
+						<td>N/m </td>
+						<td>≥8</td>
+					</tr>
+					<tr>
+						<td>Устойчивость к вдавливанию</td>
+						<td>EN1516</td>
+						<td>мм</td>
+						<td>≤0,5</td>
+					</tr>
+					<tr>
+						<td>Обработка поверхности</td>
+						<td>─</td>
+						<td>─</td>
+						<td>глянец+</td>
+					</tr>
+					<tr>
+						<td>Антибактериальная защита</td>
+						<td>ISO22196</td>
+						<td>─</td>
+						<td>>99%</td>
+					</tr>
+					<tr>
+						<th>Спецификации</th>
+						<th></th>
+						<th></th>
+						<th></th>
+					</tr>
+					<tr>
+						<td>Пожаробезопасность</td>
+						<td>GB8624-2012</td>
+						<td>─</td>
+						<td>B1(B-S1,t0)</td>
+					</tr>
+					<tr>
+						<td>Воздух замкнутых помещений</td>
+						<td>ISO 16000-6</td>
+						<td>µg/m2</td>
+						<td>˃100</td>
+					</tr>
+					<tr>
+						<td>Тест на токсичные и вредные вещества</td>
+						<td>GB18586-2001</td>
+						<td>─</td>
+						<td>>квалифицированный</td>
+					</tr>
+
+				</table>
+			</div>
+		</div>
+
+	</div>
+</section>
+
+<section class="cover">
+	<div class="cover-bg"></div>
+	<div class="cover__container _container">
+		<div class="cover__title _title__black">Мы поставляем <span class="text-red">наполные покрытия</span> на любые
+			объекты
+		</div>
+		<div class="cover__items">
+			<div class="cover__item">
+				<img src="img/cover/icon1.png" alt="icon" class="cover__img">
+				<div class="cover__name-box">Школьные спортивные залы</div>
+			</div>
+			<div class="cover__item">
+				<img src="img/cover/icon2.png" alt="icon" class="cover__img">
+				<div class="cover__name-box">Тренажерные и фитнес залы</div>
+			</div>
+			<div class="cover__item">
+				<img src="img/cover/icon3.png" alt="icon" class="cover__img">
+				<div class="cover__name-box">Универсальные спортивные залы (футбол, баскетбол, волейбол)</div>
+			</div>
+			<div class="cover__item">
+				<img src="img/cover/icon4.png" alt="icon" class="cover__img">
+				<div class="cover__name-box">Детские сады</div>
+			</div>
+			<div class="cover__item">
+				<img src="img/cover/icon5.png" alt="icon" class="cover__img">
+				<div class="cover__name-box">Залы аэробики и гимнастики</div>
+			</div>
+			<div class="cover__item">
+				<img src="img/cover/icon6.png" alt="icon" class="cover__img">
+				<div class="cover__name-box">Залы настольного тенниса</div>
+			</div>
+		</div>
+		<div class="button-cover">
+			<a href="#" class="cover__btn button btn_red">Оставить заявку</a>
 		</div>
 	</div>
 </section>
