--- a/neosport.kz/index.html
+++ b/neosport.kz/index.html
@@ -483,6 +483,33 @@
 		</div>
 	</div>
 </section>
+
+<section class="sertificat">
+	<div class="sertificat__container _container">
+		<div class="sertificat__title _title__black">Сертификаты</div>
+		<div class="about__line-gor"></div>
+		<div class="sertificat__slider _swiper _gallery">
+			<a href="img/sertificat/set1.jpg">
+				<img src="img/sertificat/set1.jpg" alt="sertificat" class="sert__slider _ibg">
+			</a>
+			<a href="img/sertificat/set2.jpg">
+				<img src="img/sertificat/set2.jpg" alt="sertificat" class="sert__slider _ibg">
+			</a>
+			<a href="img/sertificat/set3.jpg">
+				<img src="img/sertificat/set3.jpg" alt="sertificat" class="sert__slider _ibg">
+			</a>
+			<a href="img/sertificat/set4.jpg">
+				<img src="img/sertificat/set4.jpg" alt="sertificat" class="sert__slider _ibg">
+			</a>
+			<a href="img/sertificat/set5.jpg">
+				<img src="img/sertificat/set5.jpg" alt="sertificat" class="sert__slider _ibg">
+			</a>
+			<a href="img/sertificat/set6.jpg">
+				<img src="img/sertificat/set6.jpg" alt="sertificat" class="sert__slider _ibg">
+			</a>
+		</div>
+	</div>
+</section>
 		<main class="page">
 
 		</main>
