--- a/neosport.kz/index.html
+++ b/neosport.kz/index.html
@@ -507,7 +507,13 @@
 			<a href="img/sertificat/set6.jpg">
 				<img src="img/sertificat/set6.jpg" alt="sertificat" class="sert__slider _ibg">
 			</a>
+
+			<div class="swiper-button-next"></div>
+			<div class="swiper-button-prev"></div>
 		</div>
+		<div class="swiper-button-next"></div>
+		<div class="swiper-button-prev"></div>
+
 	</div>
 </section>
 		<main class="page">
