--- a/#src/_header.html
+++ b/#src/_header.html
@@ -472,27 +472,29 @@
 	<div class="sertificat__container _container">
 		<div class="sertificat__title _title__black">Сертификаты</div>
 		<div class="about__line-gor"></div>
-		<div class="sertificat__slider _swiper _gallery">
-			<a href="img/sertificat/set1.jpg" class="sert-img">
-				<img src="img/sertificat/set1.jpg" alt="sertificat" class="sert__slider _ibg">
-			</a>
-			<a href="img/sertificat/set2.jpg" class="sert-img">
-				<img src="img/sertificat/set2.jpg" alt="sertificat" class="sert__slider _ibg">
-			</a>
-			<a href="img/sertificat/set3.jpg" class="sert-img">
-				<img src="img/sertificat/set3.jpg" alt="sertificat" class="sert__slider _ibg">
-			</a>
-			<a href="img/sertificat/set4.jpg" class="sert-img">
-				<img src="img/sertificat/set4.jpg" alt="sertificat" class="sert__slider _ibg">
-			</a>
-			<a href="img/sertificat/set5.jpg" class="sert-img">
-				<img src="img/sertificat/set5.jpg" alt="sertificat" class="sert__slider _ibg">
-			</a>
-			<a href="img/sertificat/set6.jpg" class="sert-img">
-				<img src="img/sertificat/set6.jpg" alt="sertificat" class="sert__slider _ibg">
-			</a>
-			<div class="swiper-button-next"></div>
-			<div class="swiper-button-prev"></div>
+		<div class="sliders slider">
+			<div class="sertificat__slider _swiper _gallery">
+				<a href="img/sertificat/set1.jpg" class="sert-img">
+					<img src="img/sertificat/set1.jpg" alt="sertificat" class="sert__slider _ibg">
+				</a>
+				<a href="img/sertificat/set2.jpg" class="sert-img">
+					<img src="img/sertificat/set2.jpg" alt="sertificat" class="sert__slider _ibg">
+				</a>
+				<a href="img/sertificat/set3.jpg" class="sert-img">
+					<img src="img/sertificat/set3.jpg" alt="sertificat" class="sert__slider _ibg">
+				</a>
+				<a href="img/sertificat/set4.jpg" class="sert-img">
+					<img src="img/sertificat/set4.jpg" alt="sertificat" class="sert__slider _ibg">
+				</a>
+				<a href="img/sertificat/set5.jpg" class="sert-img">
+					<img src="img/sertificat/set5.jpg" alt="sertificat" class="sert__slider _ibg">
+				</a>
+				<a href="img/sertificat/set6.jpg" class="sert-img">
+					<img src="img/sertificat/set6.jpg" alt="sertificat" class="sert__slider _ibg">
+				</a>
+				<div class="swiper-button-next"></div>
+				<div class="swiper-button-prev"></div>
+			</div>
 		</div>
 
 	</div>
