--- a/neosport.kz/index.html
+++ b/neosport.kz/index.html
@@ -488,27 +488,29 @@
 	<div class="sertificat__container _container">
 		<div class="sertificat__title _title__black">Сертификаты</div>
 		<div class="about__line-gor"></div>
-		<div class="sertificat__slider _swiper _gallery">
-			<a href="img/sertificat/set1.jpg" class="sert-img">
-				<img src="img/sertificat/set1.jpg" alt="sertificat" class="sert__slider _ibg">
-			</a>
-			<a href="img/sertificat/set2.jpg" class="sert-img">
-				<img src="img/sertificat/set2.jpg" alt="sertificat" class="sert__slider _ibg">
-			</a>
-			<a href="img/sertificat/set3.jpg" class="sert-img">
-				<img src="img/sertificat/set3.jpg" alt="sertificat" class="sert__slider _ibg">
-			</a>
-			<a href="img/sertificat/set4.jpg" class="sert-img">
-				<img src="img/sertificat/set4.jpg" alt="sertificat" class="sert__slider _ibg">
-			</a>
-			<a href="img/sertificat/set5.jpg" class="sert-img">
-				<img src="img/sertificat/set5.jpg" alt="sertificat" class="sert__slider _ibg">
-			</a>
-			<a href="img/sertificat/set6.jpg" class="sert-img">
-				<img src="img/sertificat/set6.jpg" alt="sertificat" class="sert__slider _ibg">
-			</a>
-			<div class="swiper-button-next"></div>
-			<div class="swiper-button-prev"></div>
+		<div class="sliders slider">
+			<div class="sertificat__slider _swiper _gallery">
+				<a href="img/sertificat/set1.jpg" class="sert-img">
+					<img src="img/sertificat/set1.jpg" alt="sertificat" class="sert__slider _ibg">
+				</a>
+				<a href="img/sertificat/set2.jpg" class="sert-img">
+					<img src="img/sertificat/set2.jpg" alt="sertificat" class="sert__slider _ibg">
+				</a>
+				<a href="img/sertificat/set3.jpg" class="sert-img">
+					<img src="img/sertificat/set3.jpg" alt="sertificat" class="sert__slider _ibg">
+				</a>
+				<a href="img/sertificat/set4.jpg" class="sert-img">
+					<img src="img/sertificat/set4.jpg" alt="sertificat" class="sert__slider _ibg">
+				</a>
+				<a href="img/sertificat/set5.jpg" class="sert-img">
+					<img src="img/sertificat/set5.jpg" alt="sertificat" class="sert__slider _ibg">
+				</a>
+				<a href="img/sertificat/set6.jpg" class="sert-img">
+					<img src="img/sertificat/set6.jpg" alt="sertificat" class="sert__slider _ibg">
+				</a>
+				<div class="swiper-button-next"></div>
+				<div class="swiper-button-prev"></div>
+			</div>
 		</div>
 
 	</div>
@@ -546,7 +548,7 @@
 	</div>
 </div>
 	<!-- Swiper -->
-<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.8.0/swiper-bundle.min.js"></script> -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.8.0/swiper-bundle.min.js"></script>
 <!-- <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script> -->
 <script src="js/vendors.min.js"></script>
 <script src="js/app.min.js"></script>
