--- a/#src/_header.html
+++ b/#src/_header.html
@@ -472,30 +472,54 @@
 	<div class="sertificat__container _container">
 		<div class="sertificat__title _title__black">Сертификаты</div>
 		<div class="about__line-gor"></div>
-		<div class="sliders slider">
-			<div class="sertificat__slider _swiper _gallery">
-				<a href="img/sertificat/set1.jpg" class="sert-img">
-					<img src="img/sertificat/set1.jpg" alt="sertificat" class="sert__slider _ibg">
-				</a>
-				<a href="img/sertificat/set2.jpg" class="sert-img">
-					<img src="img/sertificat/set2.jpg" alt="sertificat" class="sert__slider _ibg">
-				</a>
-				<a href="img/sertificat/set3.jpg" class="sert-img">
-					<img src="img/sertificat/set3.jpg" alt="sertificat" class="sert__slider _ibg">
-				</a>
-				<a href="img/sertificat/set4.jpg" class="sert-img">
-					<img src="img/sertificat/set4.jpg" alt="sertificat" class="sert__slider _ibg">
-				</a>
-				<a href="img/sertificat/set5.jpg" class="sert-img">
-					<img src="img/sertificat/set5.jpg" alt="sertificat" class="sert__slider _ibg">
-				</a>
-				<a href="img/sertificat/set6.jpg" class="sert-img">
-					<img src="img/sertificat/set6.jpg" alt="sertificat" class="sert__slider _ibg">
-				</a>
-				<div class="swiper-button-next"></div>
-				<div class="swiper-button-prev"></div>
+		<div class="sertificat__slider _swiper _gallery">
+			<a href="img/sertificat/set1.jpg" class="sert-img">
+				<img src="img/sertificat/set1.jpg" alt="sertificat" class="sert__slider _ibg">
+			</a>
+			<a href="img/sertificat/set2.jpg" class="sert-img">
+				<img src="img/sertificat/set2.jpg" alt="sertificat" class="sert__slider _ibg">
+			</a>
+			<a href="img/sertificat/set3.jpg" class="sert-img">
+				<img src="img/sertificat/set3.jpg" alt="sertificat" class="sert__slider _ibg">
+			</a>
+			<a href="img/sertificat/set4.jpg" class="sert-img">
+				<img src="img/sertificat/set4.jpg" alt="sertificat" class="sert__slider _ibg">
+			</a>
+			<a href="img/sertificat/set5.jpg" class="sert-img">
+				<img src="img/sertificat/set5.jpg" alt="sertificat" class="sert__slider _ibg">
+			</a>
+			<a href="img/sertificat/set6.jpg" class="sert-img">
+				<img src="img/sertificat/set6.jpg" alt="sertificat" class="sert__slider _ibg">
+			</a>
+		</div>
+		<div class="swiper-button-prev _icon-arrow-right"></div>
+		<div class="swiper-button-next _icon-arrow-right"></div>
+	</div>
+</section>
+
+<section class="contacts">
+	<div class="contacts__container _container">
+		<div class="contacts__title _title__black">Наши контакты</div>
+		<div class="about__line-gor"></div>
+		<div class="contacts__body">
+			<div class="contacts__items">
+				<div class="contacts__adress">
+					<img src="img/map.svg" alt="map" class="contacts__map">
+					<div class="contacts__content">
+						<div class="contacts__subtitle">Адрес:</div>
+						<div class="contacts__text">Казахстан, г.Алматы <br> ул.Ислама Каримова 164, офис 315, 3 этаж</div>
+					</div>
+				</div>
+			</div>
+			<div class="contacts__maps">
+				<div style="position:relative;overflow:hidden;"><a
+						href="https://yandex.kz/maps/162/almaty/?utm_medium=mapframe&utm_source=maps"
+						style="color:#eee;font-size:12px;position:absolute;top:0px;">Алматы</a><a
+						href="https://yandex.kz/maps/162/almaty/house/Y08Yfg9kTUIOQFppfX51cn5rYA==/?ll=76.884478%2C43.243284&utm_medium=mapframe&utm_source=maps&z=17.01"
+						style="color:#eee;font-size:12px;position:absolute;top:14px;">Улица Ислама Каримова, 164 —
+						Яндекс.Карты</a><iframe src="https://yandex.kz/map-widget/v1/-/CCUmmRq5xC" width="560" height="400"
+						frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div>
 			</div>
 		</div>
-
 	</div>
 </section>
