--- a/#src/_header.html
+++ b/#src/_header.html
@@ -504,12 +504,47 @@
 		<div class="contacts__body">
 			<div class="contacts__items">
 				<div class="contacts__adress">
-					<img src="img/map.svg" alt="map" class="contacts__map">
+					<div class="contacts__icon">
+						<img src="img/map.svg" alt="map" class="contacts__map">
+					</div>
 					<div class="contacts__content">
 						<div class="contacts__subtitle">Адрес:</div>
 						<div class="contacts__text">Казахстан, г.Алматы <br> ул.Ислама Каримова 164, офис 315, 3 этаж</div>
 					</div>
 				</div>
+				<div class="contacts__adress">
+					<div class="contacts__icon">
+						<img src="img/telephone.svg" alt="telephone" class="contacts__map">
+					</div>
+					<div class="contacts__content">
+						<div class="contacts__subtitle">Телефон:</div>
+						<div class="contacts__text"><a href="tel:+77001515202">+7 700 151 52 02</a></div>
+					</div>
+				</div>
+				<div class="contacts__adress">
+					<div class="contacts__icon">
+						<img src="img/email.svg" alt="email" class="contacts__map">
+					</div>
+					<div class="contacts__content">
+						<div class="contacts__subtitle">Эл. почта:</div>
+						<div class="contacts__text"><a href="mailto:info@neosport.kz">info@neosport.kz</a></div>
+					</div>
+				</div>
+				<div class="contacts__adress">
+					<div class="contacts__icon">
+						<img src="img/wall-clock.svg" alt="clock" class="contacts__map">
+					</div>
+					<div class="contacts__content">
+						<div class="contacts__subtitle">Режим работы:</div>
+						<div class="contacts__text">с 09:00 до 18:00</div>
+					</div>
+				</div>
+				<div class="contacts__subtitle">Социальные сети:</div>
+				<div class="contact__icons">
+					<a href="#" class="cont-icon"><img src="img/whatsapp.svg" alt="whatsapp"></a>
+					<a href="#" class="cont-icon"><img src="img/telegram.svg" alt="telegram"></a>
+				</div>
+				<button class="contact__btn button btn_red">Оставить заявку</button>
 			</div>
 			<div class="contacts__maps">
 				<div style="position:relative;overflow:hidden;"><a
@@ -517,7 +552,7 @@
 						style="color:#eee;font-size:12px;position:absolute;top:0px;">Алматы</a><a
 						href="https://yandex.kz/maps/162/almaty/house/Y08Yfg9kTUIOQFppfX51cn5rYA==/?ll=76.884478%2C43.243284&utm_medium=mapframe&utm_source=maps&z=17.01"
 						style="color:#eee;font-size:12px;position:absolute;top:14px;">Улица Ислама Каримова, 164 —
-						Яндекс.Карты</a><iframe src="https://yandex.kz/map-widget/v1/-/CCUmmRq5xC" width="560" height="400"
+						Яндекс.Карты</a><iframe src="https://yandex.kz/map-widget/v1/-/CCUmmRq5xC" width="100%" height="400"
 						frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div>
 			</div>
 		</div>
