--- a/#src/_footer.html
+++ b/#src/_footer.html
@@ -4,3 +4,11 @@
 				target="_blank">«Webprof.kz»</a> </p>
 	</div>
 </footer>
+
+<div type="button" class="callback-wt">
+	<a href="https://api.whatsapp.com/send?phone=+77001515202" target="_blank" rel="nofollow">
+		<div class="text-call">
+			<i class="fab fa-whatsapp"></i>
+		</div>
+	</a>
+</div>
