--- a/#src/_js.html
+++ b/#src/_js.html
@@ -1,5 +1,6 @@
 <!-- Swiper -->
 <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.8.0/swiper-bundle.min.js"></script> -->
-<!-- <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script> -->
+<!-- <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script> -->\
+<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
 <script src="js/vendors.min.js"></script>
 <script src="js/app.min.js"></script>
