--- a/neosport.kz/index.html
+++ b/neosport.kz/index.html
@@ -82,7 +82,7 @@
 					<img src="img/item4.png" alt="" class="advantage_images">
 					<div class="advantage__title">Более 500 объектов
 					</div>
-					<div class="advantage__text">Прямые поставки от завода производителя</div>
+					<div class="advantage__text">С 2016 года мы застелили более 500 объектов по Казахстану</div>
 				</div>
 			</div>
 		</div>
@@ -583,6 +583,14 @@
 				target="_blank">«Webprof.kz»</a> </p>
 	</div>
 </footer>
+
+<div type="button" class="callback-wt">
+	<a href="https://api.whatsapp.com/send?phone=+77001515202" target="_blank" rel="nofollow">
+		<div class="text-call">
+			<i class="fab fa-whatsapp"></i>
+		</div>
+	</a>
+</div>
 	</div>
 	<div class="popup popup_popup">
 	<div class="popup__content">
@@ -627,7 +635,8 @@
 </div>
 	<!-- Swiper -->
 <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.8.0/swiper-bundle.min.js"></script> -->
-<!-- <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script> -->
+<!-- <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script> -->\
+<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
 <script src="js/vendors.min.js"></script>
 <script src="js/app.min.js"></script>
 </body>
