--- a/#src/_header.html
+++ b/#src/_header.html
@@ -66,7 +66,7 @@
 					<img src="img/item4.png" alt="" class="advantage_images">
 					<div class="advantage__title">Более 500 объектов
 					</div>
-					<div class="advantage__text">Прямые поставки от завода производителя</div>
+					<div class="advantage__text">С 2016 года мы застелили более 500 объектов по Казахстану</div>
 				</div>
 			</div>
 		</div>
